    limiting detection of cred pointer overwrite attacks on those kernels
 *) To compensate for the above and as an enhancement on older kernels, check
    for cred pointer overwrites in certain other places where we did not before
 *) Do not track those credentials that we currently do not validate anyway
 *) Support (or rather be compatible with the kernel's use of) Intel CET IBT
 *) Switch many hooks from kretprobes to simple kprobes for greater reliability
    and improved performance
 *) Overhaul locking of per-task shadow data, using finer-grain locks
 *) Improve performance of per-task shadow data lookups by making them lockless
 *) Fix several lethal race conditions involving SECCOMP_FILTER_FLAG_TSYNC
 *) Fix integrity violation misattribution to a wrong task when pint_enforce=0
 *) Fix several integrity violation race conditions when pint_enforce=0
 *) Fix race condition (possible NULL dereference) with namespace validation
 *) Fix race condition on msr_validate sysctl changes as well as on transitions
    between profile_validate=4 and others
 *) Make kprobes testing via LKRG's own dummy function hooking optional (works
    around issue seen on recent Gentoo)
 *) Build and link the userspace logger tools with hardening flags, and pass
    distributions' RPM packaging hardening flags to the compiler and linker
 *) lkrg-logctl: Support and report continuation lines (an extra one-character
    field indicating whether the line is a new message or a continuation)
 *) lkrg-logger: Make logs group-readable


The following major changes have been made between LKRG 0.9.8 and 0.9.9:

 *) Support Linux 6.11+ and stable 6.10.10+
 *) Support new longterm kernels 5.10.220+
 *) Support new CentOS Stream 9 kernel 5.14.0-470.el9 and beyond (to RHEL 9.5)
 *) Support CONFIG_JUMP_LABEL batch mode also on ARM64
 *) Re-support build without CONFIG_TRACEPOINTS (was broken in 0.9.8)
 *) pCFI: Upgrade "Frame pointer is not on the stack" to ALERT with enforcement